# mumemto

./: CMakeLists.txt  Dockerfile  README.md
CMakeModules/: ConfigureCompilerGcc.cmake
analysis/: merge_mums.py  parsnp_ini.py  viz_mums.py
include/: CMakeLists.txt  common.hpp  dictionary.hpp  mem_finder.hpp  mum_finder.hpp  parse.hpp  pfp.hpp  pfp_doc.hpp  pfp_lcp_mum.hpp  pfp_mum.hpp  read_arrays.hpp  ref_builder.hpp
src/: CMakeLists.txt  pfp_doc.cpp  pfp_mum.cpp  ref_builder.cpp
